--- a/MediaCollection/Info.plist
+++ b/MediaCollection/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This lets you send photos and videos from your library and save the ones you capture.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This lets you send photos and videos from your library and save the ones you capture.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
